moved pages under Dashboard

--- a/src/app/nav/sidenav/sidenav.component.html
+++ b/src/app/nav/sidenav/sidenav.component.html
@@ -6,40 +6,40 @@
         </a>
     </li>
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-        <a class="nav-link"  routerLink="/add-employee">
+        <a class="nav-link"  routerLink="/dashboard/add-employee">
             <i class="fa fa-fw fa-area-chart"></i>
             <span class="nav-link-text">Add Employee</span>
         </a>
     </li>
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-        <a class="nav-link" routerLink="/list-employee">
+        <a class="nav-link" routerLink="/dashboard/list-employee">
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">Employee List</span>
         </a>
     </li>
     
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-        <a class="nav-link" routerLink="/edit-employee">
+        <a class="nav-link" routerLink="/dashboard/edit-employee">
             <i class="fa fa-fw fa-wrench"></i>
             <span class="nav-link-text">Edit Employee</span>
         </a>
     </li>
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-        <a class="nav-link" routerLink="/details-employee">
+        <a class="nav-link" routerLink="/dashboard/details-employee">
             <i class="fa fa-fw fa-file"></i>
             <span class="nav-link-text">Employee Details</span>
         </a>
         
     </li>
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
-        <a class="nav-link"  routerLink="/Menu">
+        <a class="nav-link"  routerLink="/dashboard/Menu">
             <i class="fa fa-fw fa-sitemap"></i>
             <span class="nav-link-text">Menu Levels</span>
         </a>
         
     </li>
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-        <a class="nav-link"routerLink="/Menu">
+        <a class="nav-link"routerLink="/dashboard/Menu">
             <i class="fa fa-fw fa-link"></i>
             <span class="nav-link-text">Link</span>
         </a>
