--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,3 +1,14 @@
-<p>
-  page-not-found works!
-</p>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-md-offset-12">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Page Not Found.</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
