--- a/src/app/nav/sidenav/sidenav.component.html
+++ b/src/app/nav/sidenav/sidenav.component.html
@@ -1,3 +1,4 @@
+
 <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
     <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
         <a class="nav-link"  routerLink="/dashboard">
@@ -52,3 +53,4 @@
         </a>
     </li>
 </ul>
+<app-usernav></app-usernav>
