--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -23,6 +23,9 @@
                                 <!-- Change this to a button or input when using this as a form -->
                                  <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
                             </fieldset>
+                            <div *ngIf="show;">
+                                Login Failed.
+                            </div>
                         </form>
                     </div>
                 </div>
