--- a/src/app/nav/usernav/usernav.component.html
+++ b/src/app/nav/usernav/usernav.component.html
@@ -94,7 +94,7 @@
         </form>
     </li>
     <li class="nav-item">
-        <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+        <a class="nav-link" data-toggle="modal" data-target="#exampleModal"  href="#" (click)="onLogout()">
             <i class="fa fa-fw fa-sign-out"></i>Logout
         </a>
     </li>
