--- a/src/app/pages/listemployee/listemployee.component.html
+++ b/src/app/pages/listemployee/listemployee.component.html
@@ -1,3 +1,14 @@
 <p>
   listemployee works!
 </p>
+<div>
+    <ngx-datatable class="material"
+                   [rows]="rows"
+                   [columns]="columns"
+                   [columnMode]="'force'"
+                   [headerHeight]="50"
+                   [footerHeight]="50"
+                   [rowHeight]="'auto'"
+                   [limit]="10">
+    </ngx-datatable>
+</div>
